# nonebot-plugin-anime-trace

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_anime_trace/: __init__.py  api.py  config.py  exception.py  model.py  tool.py
tests/: __init__.py
